O motor da Fase 8, ligado sozinho: lances 2,4× mais rápidos, jogadas idênticas
A Fase 8 do JChessAI deixou a rede muito mais rápida sem mudar um bit de nenhuma jogada
(registro técnico completo no otimizacoes.md de lá). Aqui, no consumidor, isso vira tempo
por lance: o nível 200 caiu de ~1,2 s para ~0,5 s, e o 800 de hoje custa o que o 200
custava — 4× mais busca pelo mesmo relógio contra os bots.

O núcleo rápido do motor (Vector API) precisa de `--add-modules jdk.incubator.vector` na
linha de comando do Java — e um Java sem o módulo se recusaria a SUBIR com a flag. O
MotorUci passou a resolver isso sozinho: sonda uma vez com um `-version` descartável e só
usa a flag se o Java aceitar; senão o motor sobe sem ela e cai no núcleo escalar. É melhor
perder a flag que perder o motor.

O diagnóstico ficou visível: o MotorUci captura a linha de carga do motor
(`rede ... — núcleo vetorial (8 lanes)`) e a expõe em descricaoDaRede(); o console do
JChessCheater e o TesteDeFumaca a imprimem — numa máquina nova, uma linha diz se o ganho
completo está ativo.

Pacote dist/ reempacotado com o jchessai.jar novo (a regra da casa: o JAR vive aqui por
cópia, e toda melhoria no motor exige trazê-lo e reempacotar). 64/64 no diagnóstico, com o
núcleo vetorial ativo dentro do pacote. Nada mais foi tocado: visão, robô e laço de jogo
sempre custaram uma fração desprezível do lance, e a latência do mouse é humanização
deliberada, não desperdício.

O otimizacoes.md novo registra os números do ponto de vista de quem joga.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>